[package]
name = "qma"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["toritoritori29 <toritorineko29@gmail.com>"]
description = "Simple command line tool for aggregate structured log."

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0.81"
serde_yaml = "0.8"
